--- a/uw-ethesis.bib
+++ b/uw-ethesis.bib
@@ -63,6 +63,17 @@ location = {Pittsburgh, PA, USA},
 series = {OOPSLA 2015}
 }
 
+@article{blondel2008fast,
+  title={Fast unfolding of communities in large networks},
+  author={Blondel, Vincent D and Guillaume, Jean-Loup and Lambiotte, Renaud and Lefebvre, Etienne},
+  journal={Journal of statistical mechanics: theory and experiment},
+  volume={2008},
+  number={10},
+  pages={P10008},
+  year={2008},
+  publisher={IOP Publishing}
+}
+
 @Article{evans20:_unsaf,
   author =       {Ben Evans},
   title =        {The {Unsafe} class: Unsafe at any speed},
@@ -485,21 +496,7 @@ pages = {44–46},
 numpages = 3
 }
 
-  
-@IEEEtranBSTCTL{IEEEexample:BSTcontrol,
-  CTLuse_article_number     = "yes",
-  CTLuse_paper              = "yes",
-  CTLuse_url                = "yes",
-  CTLuse_forced_etal        = "no",
-  CTLmax_names_forced_etal  = "10",
-  CTLnames_show_etal        = "1",
-  CTLuse_alt_spacing        = "yes",
-  CTLalt_stretch_factor     = "4",
-  CTLdash_repeated_names    = "yes",
-  CTLname_format_string     = "{f.~}{vv~}{ll}{, jj}",
-  CTLname_latex_cmd         = "",
-  CTLname_url_prefix        = "[Online]. Available:"
-}
+ 
 
 
 @InProceedings{chiba00:_load_struc_reflec_java,
